--- a/ihc_project/pubspec.yaml
+++ b/ihc_project/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.2.2
   flutter_secure_storage: ^7.0.0
   jwt_decoder: ^2.0.1
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
